--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
