--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-get-random-values": "^1.11.0",
