--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
+    "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
@@ -20,6 +21,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
+    "react-redux": "^9.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
