--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
