--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
     "uuid": "^9.0.1",
-    "expo-splash-screen": "~0.27.5"
+    "expo-splash-screen": "~0.27.5",
+    "expo-notifications": "~0.28.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
